[package]
name = "seccomp-psp-policy"
version = "0.1.4"
authors = ["José Guilherme Vanz <jvanz@jvanz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.21.0", features = ["v1_24"] }
kubewarden-policy-sdk = { version = "0.9.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
