[package]
name = "seccomp-psp-policy"
version = "0.1.4"
authors = ["José Guilherme Vanz <jvanz@jvanz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_29"] }
kubewarden-policy-sdk = { version = "0.13.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
