[package]
name = "seccomp-psp-policy"
version = "1.0.5"
authors = ["José Guilherme Vanz <jvanz@jvanz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kubewarden-policy-sdk = { version = "0.14.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
